--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -43,7 +43,8 @@
       }
 
       #camera-area {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 1rem;
       }
 
@@ -60,9 +61,50 @@
         object-fit: cover;
       }
 
+      #capture-button-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem 0;
+      }
+
+      #capture {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 4px solid #fff;
+        background: #9e9e9e;
+        cursor: pointer;
+        padding: 0;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        transition: all 0.2s ease;
+        position: relative;
+        font-size: 0;
+        text-indent: -9999px;
+        overflow: hidden;
+      }
+
+      #capture:enabled {
+        background: #9e9e9e;
+      }
+
+      #capture:enabled:active,
+      #capture:enabled.pressed {
+        background: #ff3b30;
+        transform: scale(0.95);
+        box-shadow: 0 2px 8px rgba(255, 59, 48, 0.4);
+      }
+
+      #capture:disabled {
+        background: #9e9e9e;
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+
       #controls {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         gap: 0.75rem;
       }
 
@@ -137,9 +179,12 @@
     <section id="camera-area">
       <video id="preview" playsinline muted></video>
 
+      <div id="capture-button-container">
+        <button id="capture" disabled>Capture</button>
+      </div>
+
       <div id="controls">
         <button id="start-camera">Start Camera</button>
-        <button id="capture" class="secondary" disabled>Capture Photo</button>
         <button id="toggle-scan" class="secondary" disabled>Start QR Scan</button>
         <button id="stop" class="secondary" disabled>Stop Camera</button>
       </div>
@@ -382,7 +427,31 @@
 
       startCameraBtn.addEventListener("click", initCamera);
       stopBtn.addEventListener("click", stopCamera);
-      captureBtn.addEventListener("click", capturePhoto);
+      
+      // Capture button with visual feedback
+      captureBtn.addEventListener("mousedown", () => {
+        if (!captureBtn.disabled) {
+          captureBtn.classList.add("pressed");
+        }
+      });
+      captureBtn.addEventListener("mouseup", () => {
+        captureBtn.classList.remove("pressed");
+      });
+      captureBtn.addEventListener("mouseleave", () => {
+        captureBtn.classList.remove("pressed");
+      });
+      captureBtn.addEventListener("touchstart", () => {
+        if (!captureBtn.disabled) {
+          captureBtn.classList.add("pressed");
+        }
+      });
+      captureBtn.addEventListener("touchend", () => {
+        captureBtn.classList.remove("pressed");
+      });
+      captureBtn.addEventListener("click", () => {
+        captureBtn.classList.remove("pressed");
+        capturePhoto();
+      });
       savePhotoBtn.addEventListener("click", async () => {
         if (!photo.src) {
           return;
