Auto-start camera when app opens
- Automatically start camera when page loads in WebView (Android app)
- Detect WebView environment and call initCamera() after 500ms delay
- Camera starts immediately on app launch without requiring button click
- Start Camera button automatically disabled once camera is active
- Browser version still requires manual start for privacy reasons
- Improves user experience by making app ready to use immediately

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -586,6 +586,14 @@
           }, 500);
         }
       }
+
+      // Automatically start camera when page loads (especially in WebView/Android app)
+      if (isWebView) {
+        // In Android app, start camera automatically after a short delay
+        setTimeout(() => {
+          initCamera();
+        }, 500);
+      }
     </script>
   </body>
 </html>
