Increase camera area size and remove header text
- Remove header section with title and description text
- Increase video height from 60vh to 85vh for larger camera preview
- Set explicit height property in addition to max-height
- Camera area now takes up 85% of viewport height instead of 60%
- Provides more screen space for camera preview and better mobile UX

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -62,7 +62,8 @@
       }
 
       video {
-        max-height: 60vh;
+        max-height: 85vh;
+        height: 85vh;
         object-fit: cover;
         display: block;
         position: relative;
@@ -189,14 +190,6 @@
     </style>
   </head>
   <body>
-    <header>
-      <h1>Simple Camera & QR Scanner</h1>
-      <p>
-        Use the buttons below to capture photos or scan QR codes directly from
-        your device's camera.
-      </p>
-    </header>
-
     <section id="camera-area">
       <div id="video-container" style="position: relative; width: 100%;">
         <video id="preview" playsinline muted autoplay></video>
